--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "devDependencies": {
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
-    "vitepress": "2.0.0-alpha.11"
+    "vitepress": "^2.0.0-alpha.11"
   },
   "files": [
     "dist/**/*",
