refactor(crs): 移除坐标参考系统(CRS)相关代码、文档和示例,简化项目结构，专注于核心GeoJSON功能 1. 更新package.json版本至1.0.5 2. 新增isPointInPolygon Api 3. 更新文档导航和侧边栏

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geo-types-cz",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "Complete TypeScript type definitions for GeoJSON and extended GIS types",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -36,5 +36,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/Thunder7991/geo-types-cz.git"
+  },
+  "dependencies": {
+    "point-in-polygon-hao": "^1.2.4"
   }
 }
